chore: spotbug linting fixes