@@ -82,7 +82,7 @@ public class AttributeInteger extends AttributeNumber
     }
     else
     {
-      return new Integer(this.getValue());
+      return Integer.valueOf(this.getValue());
     }
   }
   
