@@ -91,7 +91,7 @@ public class AttributeLong extends AttributeNumber
     }
     else
     {
-      return new Long(this.getValue());
+      return Long.valueOf(this.getValue());
     }
   }
   
