@@ -1520,7 +1520,7 @@ public class HsqlDB extends AbstractDatabase
    */
   public void throwDatabaseException(SQLException ex, String debugMsg)
   {
-    String errorCode = new String( new Integer(ex.getErrorCode()).toString() );
+    String errorCode = new String( Integer.valueOf(ex.getErrorCode()).toString() );
     String errorMessage = ex.getMessage();
 
     if (DatabaseProperties.isSeriousError(errorCode))
