@@ -1615,7 +1615,7 @@ public class Oracle extends AbstractDatabase
    */
   public void throwDatabaseException(SQLException ex, String debugMsg)
   {
-    String errorCode = new String( new Integer(ex.getErrorCode()).toString() );
+    String errorCode = new String( Integer.valueOf(ex.getErrorCode()).toString() );
     String errorMessage = ex.getMessage();
 
     errorCode = errorCode.trim();
