@@ -47,7 +47,7 @@ public class DefaultFormatTest extends AbstractFormatTest
   @Override
   protected Integer getIntegerObject()
   {
-    return new Integer(4500);
+    return Integer.valueOf(4500);
   }
 
   /*
@@ -69,7 +69,7 @@ public class DefaultFormatTest extends AbstractFormatTest
   @Override
   protected Long getLongObject()
   {
-    return new Long(989999000);
+    return Long.valueOf(989999000);
   }
 
   /*
@@ -113,7 +113,7 @@ public class DefaultFormatTest extends AbstractFormatTest
   @Override
   protected Double getDoubleObject()
   {
-    return new Double(714104.008d);
+    return Double.valueOf(714104.008d);
   }
 
   /*
