@@ -116,9 +116,9 @@ public class DelegatingServletTest
 
       String result = new String(baos.toByteArray(), "UTF-8");
 
-      Integer test = new Integer(result);
+      Integer test = Integer.valueOf(result);
 
-      Assert.assertEquals(new Integer(15), test);
+      Assert.assertEquals(Integer.valueOf(15), test);
       Assert.assertEquals(200, resp.getStatus());
       Assert.assertEquals("application/json", resp.getContentType());
     }
@@ -156,9 +156,9 @@ public class DelegatingServletTest
 
       String result = new String(baos.toByteArray(), "UTF-8");
 
-      Integer test = new Integer(result);
+      Integer test = Integer.valueOf(result);
 
-      Assert.assertEquals(new Integer(100), test);
+      Assert.assertEquals(Integer.valueOf(100), test);
       Assert.assertEquals(200, resp.getStatus());
       Assert.assertEquals("application/json", resp.getContentType());
     }
